HW5 2021-Jan-26: Update HW5

--- a/homework/Day5_001_HW.ipynb
+++ b/homework/Day5_001_HW.ipynb
@@ -1,16 +1,19 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "[HW1]\n",
-    "curl -X GET -v -i 'https://sta.ci.taiwan.gov.tw/STA_AirQuality_v2/v1.0/Datastreams?$expand=Thing,Observations($orderby=phenomenonTime%20desc;$top=1)&$filter=Thing/properties/authority%20eq%20%27%E8%A1%8C%E6%94%BF%E9%99%A2%E7%92%B0%E5%A2%83%E4%BF%9D%E8%AD%B7%E7%BD%B2%27%20and%20substringof(%27%E7%A9%BA%E6%B0%A3%E5%93%81%E8%B3%AA%E6%B8%AC%E7%AB%99%27,Thing/name)&$count=true'\n",
-    "    \n",
-    "[HW2]/[HW3]\n",
-    "curl -X GET -v -i 'https://sta.ci.taiwan.gov.tw/STA_AirQuality_EPAIoT/v1.0/Things'\n"
+    "# [HW1]\n",
+    "* curl -X GET -v -i 'https://sta.ci.taiwan.gov.tw/STA_AirQuality_v2/v1.0/Datastreams?$expand=Thing,Observations($orderby=phenomenonTime%20desc;$top=1)&$filter=Thing/properties/authority%20eq%20%27%E8%A1%8C%E6%94%BF%E9%99%A2%E7%92%B0%E5%A2%83%E4%BF%9D%E8%AD%B7%E7%BD%B2%27%20and%20substringof(%27%E7%A9%BA%E6%B0%A3%E5%93%81%E8%B3%AA%E6%B8%AC%E7%AB%99%27,Thing/name)&$count=true'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [HW2/HW3]\n",
+    "* curl -X GET -v -i 'https://sta.ci.taiwan.gov.tw/STA_AirQuality_EPAIoT/v1.0/Things'"
    ]
   }
  ],
