HW13 2021-Jan-28: To fix LED value bug

--- a/homework/Day13_001_HW.ipynb
+++ b/homework/Day13_001_HW.ipynb
@@ -75,10 +75,10 @@
     "from signal import pause\n",
     "\n",
     "def led_value_100():\n",
-    "    led.value(1)\n",
+    "    led.value = 1\n",
     "\n",
     "def led_value_30():\n",
-    "    led.value(0.3)\n",
+    "    led.value = 0.3\n",
     "    \n",
     "led = LED(17) # use GPIO 17\n",
     "button = Button(2) # use GPIO 2\n",
